--- a/css/styles.css
+++ b/css/styles.css
@@ -212,8 +212,6 @@ h1, h2, h3, h4, h5, h6, ul, p {
     cursor: pointer;
 }
 
-
-
 /* Преимущества */
 
 .visually-hidden {
@@ -262,7 +260,6 @@ h1, h2, h3, h4, h5, h6, ul, p {
     align-items: center;
     
     background-color: rgba(47, 48, 58, 0.8);
-
 }
 
 .item-text {
@@ -274,6 +271,7 @@ font-weight: 700;
 
     color: var(--white-color);
 }
+
 .features {
     display: flex;
     margin-bottom: 30px;
@@ -283,6 +281,7 @@ font-weight: 700;
     justify-content: center;
     align-items: center;
 }
+
 .feature .feature-card {
     width: 270px;
 }
@@ -290,6 +289,7 @@ font-weight: 700;
 .feature .feature-card:not(:last-child) {
     margin-right: 30px;
 }
+
 .feature-icon {
     border-radius: 4px;
 }
@@ -367,8 +367,8 @@ font-weight: 700;
     border-radius: 50%;
     width: 44px;
     height: 44px;
-    
 }
+
 .team-soc-item:not(:last-child){
     margin-right: 10px;
 }
@@ -416,6 +416,7 @@ font-weight: 700;
 
     transition: border var(--time-duration) var(--timing-function);
 }
+
 .clients-item:hover,
 .clients-item:focus {
     border: 1px solid var(--axent-color);
@@ -424,6 +425,7 @@ font-weight: 700;
 .clients-item:not(:last-child) {
     margin-right: 30px;
 }
+
 .clients-link {
     display: flex;
     width: 100%;
@@ -495,7 +497,7 @@ font-weight: 700;
     text-decoration: none;
 
     transition: color var(--time-duration) var(--timing-function);
-    }
+}
 
 .adress:hover,
 .adress:focus {
@@ -606,8 +608,7 @@ font-weight: 700;
     color: rgba(255, 255, 255, 0.6);
     margin-right: 12px;
     padding-left: 16px;
-    
-    
+     
     width: 358px; 
     height: 50px;
     font-style: normal;
@@ -645,7 +646,6 @@ font-weight: 700;
 .icon-send {
     fill: var(--white-color);
     margin-left: 10px;
-    
 }
 
 /* page potfolio*/
@@ -820,7 +820,7 @@ font-weight: 700;
 }
 
 .reqest-form-call {
-    
+    text-align: center;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -833,13 +833,14 @@ font-weight: 700;
 }
 
 .form-field {
-    position: relative;
-    display: inline-block;
+    display: block;
+    text-align: left;
     margin-bottom: 10px;
     
 }
 
 .form-label {
+    display: block;
     margin-bottom: 4px;
     font-style: normal;
     font-weight: 400;
@@ -848,57 +849,112 @@ font-weight: 700;
     letter-spacing: 0.01em;
 }
 
-.form-input {
-    width: 448px;
-    height: 40px;
-    left: 576px;
-    top: 314px;
+.icon-field {
+    position: relative;
+}
 
+.form-input {
+    width: 100%;
+    height: 100%;
+    padding: 11px 12px;
     padding-left: 42px;
     
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    outline: transparent;
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:hover,
 .form-input:focus {
-    border: 1px solid var(--axent-color);
+    border-color: var(--axent-color);
 }
 
-.form-input:hover +.icon-field,
-.form-input:focus + .icon-field {
+.form-input:hover + .icon-input,
+.form-input:focus + .icon-input {
     fill: var(--axent-color);
 }
-.icon-field {
+
+.icon-input {
+    display: inline-block;
     position: absolute;
-    top: 50%;
     left: 12px;
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill var(--axent-color);
+} 
 
 .form-comment {
+    margin-bottom: 20px;
+}
+
+.form-textarea {
+    display: flex;
     height: 120px;
     padding: 12px 16px;
 
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 1.14px;
     letter-spacing: 0.01em;
+
+    resize: none;
 }
 
-.form-comment::placeholder {
+.form-textarea::placeholder {
     line-height: 1.14;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
 }
 
+.checkbox-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+
+.custom-checkbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 15px;
+    margin-right: 8.38px;
+    border: 2px solid var(--title-text-color);
+    border-radius: 2px;
+    transition: background-color var(--time-duration) var(--timing-function),
+            border-color var(--time-duration) var(--timing-function);
+}
+
+.checkbox-input:checked + .custom-checkbox {
+    background-color: var(--axent-color);
+    border-color: var(--axent-color);
+    background-image: url(../images/icon\ check.svg);
+}
+
+.checkbox-title {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+}
+
+.agreement {
+    color: var(--axent-color);
+}
+
 .submit-button {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-width: 200px;
     padding: 10px 55px 10px 56px;
+    margin-left: auto;
+    margin-right: auto;
     color: var(--white-color);
     background-color: var(--axent-color);
     
@@ -910,6 +966,11 @@ font-weight: 700;
     line-height: 1.88;
     letter-spacing: 0.06em;
     cursor: pointer;
+}
+
+.submit-button:hover,
+.submit-button:focus {
+    background-color: #188CE8;
 }
 
 .close-button {
@@ -933,7 +994,6 @@ font-weight: 700;
     left: 50%;
     transform: translate(-50%, -50%);
     fill: var(--logo-main-color);
-   
 }
 
 .close-button-icon:hover,
