--- a/css/styles.css
+++ b/css/styles.css
@@ -405,7 +405,6 @@ font-weight: 700;
 .clients {
     display: flex;
     justify-content: center;
-    /* margin: 16px 30px; */
 }
 
 .clients-item {
@@ -855,7 +854,7 @@ font-weight: 700;
 
 .form-input {
     width: 100%;
-    height: 100%;
+    height: 40px;
     padding: 11px 12px;
     padding-left: 42px;
     
@@ -984,8 +983,8 @@ font-weight: 700;
     background-color: transparent;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
-
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color var(--time-duration) var(--timing-function);
+    
 }
 
 .close-button-icon {
@@ -993,10 +992,12 @@ font-weight: 700;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    fill: var(--logo-main-color);
+    fill: currentColor;
+   
 }
 
-.close-button-icon:hover,
-.close-button-icon:focus {
-    fill: var(--axent-color);
+.close-button:hover,
+.close-button:focus {
+    color: var(--axent-color);
 }
+
